# simulator_alignment

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  makefile.yml
docs/: mkdocs.yml
docs/docs/: index.md
experiments/: main.py
scripts/: download_data.sh
simulator_alignment/: evaluator.py
simulator_alignment/data_models/: evaluation_output.py  sample.py
simulator_alignment/dataloaders/: base.py  custom.py  llm_judge_benchmark.py
simulator_alignment/simulators/: base.py  dummy.py  h2loo.py  monot5.py  olz.py  trema.py  william.py
tests/simulator_alignment/dataloaders/: test_llm_judge_benchmark.py
tests/simulator_alignment/simulators/: conftest.py  test_dummy.py  test_h2loo.py  test_olz.py  test_trema.py  test_utils.py  test_william.py
