[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simulator_alignment"
version = "0.0.1"
description = "An investigation of the relationship between LLM judges and human assessors for search relevance assessment"
authors = [
  { name = "Paul Owoicho" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "matplotlib ~= 3.10.1",
    "mkdocs ~= 1.6.1",
    "numpy ~= 2.2.0",
    "pandas ~= 2.2.3",
    "pip ~= 25.0.1",
    "pytest ~= 8.3.5",
    "python-dotenv ~= 1.1.0",
    "ruff ~= 0.11.6",
    "scikit-learn ~= 1.6.1",
    "tqdm ~= 4.67.1",
    "jsonlines ~= 4.0.0",
    "scipy ~= 1.15.2",
    "vllm ~= 0.8.4",
    "openai ~= 1.75.0",
    "retry ~= 0.9.2",
    "krippendorff ~= 0.8.1",
]
requires-python = "~=3.12.4"


[tool.ruff]
line-length = 99
src = ["simulator_alignment"]
include = ["pyproject.toml", "simulator_alignment/**/*.py", "tests/**/*.py", "experiments/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["simulator_alignment"]
force-sort-within-sections = true

